<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="facebook_application_id" translatable="false">215038316470543</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb215038316470543</string>
    <string name="fui_progress_dialog_signing_up">Création de votre brillant compte...</string>
    <string name="navigation_menu_settings">Configurations</string>
    <string name="navigation_menu_logout">Se déconnecter</string>
    <string name="dictionnaire_informatique">Dictionnaire Informatique</string>
    <string name="source_repository_git_url" translatable="false">https://github.com/amadoubakari/Ky-Dico.git</string>
    <string name="kyossi_website_url" translatable="false">https://kyossi.com</string>
    <string name="menu_recommander_msg">Recommander</string>
    <string name="menu_home_msg">Accueil</string>
    <string name="menu_me_msg">Moi</string>
    <string name="about_last_update_msg">Date de mise à jour</string>
    <string name="about_releasing_date">Novembre 2022</string>
    <string name="mini_dictionnaire_informatique_de_poche_msg">Mini Dictionnaire Informatique de poche</string>
    <string name="enable_notifications_to_received_news">Activer les notifications pour recevoir des nouveautés !</string>
    <string name="disable_notifications_to_dont_received_news">Si vous désactivez les notifications, vous risquerez ne plus recevoir des nouveautés !</string>
    <string name="button_yes_msg">OUI</string>
    <string name="button_no_msg">NON</string>
    <string name="app_version_msg" translatable="false">Version 1.1.5</string>
    <string name="menu_about_msg">A Propos</string>
    <string name="menu_connexion_msg">Connexion</string>
    <string name="menu_profil_msg">Profil</string>
    <string name="menu_settings_msg">Paramètres</string>
    <string name="delete_msg">Supprimée !</string>
    <string name="share_msg">Partager</string>
    <string name="delete_menu_msg">Supprimer</string>
    <string name="fragment_login_connect_to_continue_msg">Connectez-vous pour continuer avec</string>
    <string name="fragment_login_welcome_msg">Bienvenue !</string>
    <string name="fragment_login_connect_with_phone">Numéro téléphone</string>
    <string name="fragment_login_connect_with_mail">Adresse email</string>
    <string name="fragment_login_connect_with_google">Compte Google</string>
    <string name="fragment_login_connect_with_facebook">Compte Facebook</string>
    <string name="activity_main_connection_canceld">Connexion annulée</string>
    <string name="activity_main_network_issue">Oops! Erreur connexion internet</string>
    <string name="activity_main_try_again_mdg">Oops! Veuillez réessayer..</string>
    <string name="activity_main_disconnect_canceled">Déconnexion annulée</string>
    <string name="activity_main_do_you_want_to_leave_app">Voudriez-vous quitter l\'application?</string>
    <string name="activity_main_button_yes_msg">OUI</string>
    <string name="activity_main_do_you_want_to_disconnect">Voudriez-vous vous déconnecter de l\'application?</string>
    <string name="activity_main_button_no_msg">NON</string>
    <string name="activity_main_button_cancel">Annuler</string>
    <string name="activity_main_see_you_soon">, vous revoir bientôt !</string>
    <string name="activity_main_button_close">Fermer</string>
    <string name="activity_main_check_your_connection_and_try_again">Vérifiez votre connexion internet et réessayer plus tard.</string>
    <string name="oops_connection_issue_msg">Oops! Erreur connexion internet</string>
    <string name="activity_main_username">Username</string>
    <string name="activity_main_email_address">Email</string>
    <string name="activity_main_thanks_msg">" Merci "</string>
    <string name="dictionary_data_source" translatable="false">dictionnaire</string>
    <string name="app_name_release">Dictionnaire Informatique</string>
    <string name="app_name_debug">Dictionnaire Informatique </string>
    <string name="app_name_rct">rct</string>
    <string name="dialog_contact_welcome_msg">Bienvenue</string>
    <string name="firebase_channel_id" translatable="false">dico</string>
    <string name="app_google_play_store_url">https://play.google.com/store/apps/details?id=com.flys.dico&amp;hl=fr</string>
    <string name="activity_abstract_recommend_app">Recommandation de l\'application.</string>
    <string name="activity_abstract_recommendation_msg">Recommandation</string>
    <string name="fragment_about_dictionary_header">Dictionnaire I.</string>
    <string name="fragment_settings_layout_general_setttings_msg">Configurations générales</string>
    <string name="fragmant_settings_notifications_msg">Notifications</string>
    <string name="fragment_home_database_reference">french</string>
    <string name="fragment_home_layout_no_result_msg">Indisponible !</string>
    <string name="fragment_home_you_try_a_more">Bientôt vous serez notifiés</string>
    <string name="fragment_notif_layout_no_elements">Aucune notification\ndisponible</string>
    <string name="settingsFragment_select_language">Sélectionnez la langue ...</string>
    <string name="settings_fragment_language_english">Anglais</string>
    <string name="settings_fragment_language_french">Français</string>
    <string name="fragment_settings_language_msg">Langue</string>
    <string name="fragment_settings_language_en">Anglais, en</string>
    <string name="fragment_settings_language_fr">Français, fr</string>
    <string name="main_activity_completed_download">Vos mis à jour sont prêts à installer.</string>
    <string name="main_activity_download_completed_restart">Redémarrer</string>
    <string name="fragment_home_layout_change_langue"><![CDATA[Essayer en anglais ici >>]]></string>
    <string name="menu_rating_msg">Noter l\'application</string>
    <string name="about_fragment_github_source" translatable="false"><![CDATA[Code source <font color=%1$s>%2$s</font>]]></string>
    <string name="fragment_about_github_source_here">ici</string>
    <string name="firebase_subscription_release">firebase-dictionary-release</string>
    <string name="firebase_subscription_debug" >firebase-dictionary-debug</string>
    <string name="firebase_subscription_rct">firebase-dictionary-release</string>
    <string name="fragment_home_database_root_ref_release" translatable="false">words</string>
    <string name="fragment_home_database_root_ref_rct" translatable="false">words</string>
    <string name="fragment_home_database_root_ref_debug" translatable="false">words-debug</string>
    <string name="fragment_home_database_tops_debug" translatable="false">tops-debug</string>
    <string name="fragment_home_database_tops_release" translatable="false">tops</string>
    <string name="fragment_home_database_tops_rct" translatable="false">tops</string>
    <string name="abstract_fragment_restart_app">Veuillez rédemarrer l\'application pour prendre en compte les changements.</string>
    <string name="mode_nuit">Mode Nuit</string>
    <string name="https_site_kyossi_com" translatable="false">www.kyossi.com</string>
    <string name="fcm_notification_service_no_messages">\u0020nouveaux messages</string>
    <string name="fcm_notification_service_one_message">\u0020nouveau message</string>
    <string name="ads_native_notification_item" translatable="false">ca-app-pub-9112600790446098/6318321130</string>
    <string name="ads_native_notification_item_debug" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ads_native_notification_item_rct" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rechercher">Rechercher</string>
    <string name="notification_fragment_enable_notifications_msg">Veuillez activer les notifications\npour recevoir des nouveaux apprentissages</string>
    <string name="words_data_source" translatable="false">words</string>
    <string name="dictionary_data_source_extension" translatable="false">.json</string>
    <string name="display">Affichage</string>
    <string name="theme">Thème</string>
    <string name="settings_fragments_using_same_theme_msg">Vous utilisez déjà ce thème, veuillez sélectionner un autre.</string>
</resources>
