<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/app_background_color">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline97"
        app:layout_constraintStart_toStartOf="@+id/guideline96"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="1dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/fragment_settings_layout_general_setttings_msg"
            android:textColor="?attr/app_text_second_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/app_inverse_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/settings_account_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="?attr/app_background_color">

                <View
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/layout_padding_10dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragmant_settings_notifications_msg"
                    android:textColor="?attr/app_text_color"
                    android:textSize="14sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/app_inverse_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="?attr/app_background_color">

                <View
                    android:layout_width="@dimen/layout_padding_10dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_settings_language_msg"
                    android:textColor="?attr/app_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/current_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:text="@string/fragment_settings_language_en"
                    android:textColor="?attr/color_secondary"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/app_inverse_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/settings_night_mode_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="?attr/app_background_color">

                <View
                    android:layout_width="@dimen/layout_padding_10dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_nuit"
                    android:textColor="?attr/app_text_color"
                    android:textSize="14sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_night_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/app_inverse_color" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/display"
            android:textColor="?attr/app_text_second_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/app_inverse_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/dialog_change_language"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/app_background_color"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/layout_padding_10dp"
                    android:layout_height="24dp"
                    android:layout_weight="0.1"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/theme"
                    android:textColor="?attr/app_text_color"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_blue_selector"
                        android:button="@android:color/transparent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_red_selector"
                        android:button="@android:color/transparent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_green_selector"
                        android:button="@android:color/transparent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_pink_selector"
                        android:button="@android:color/transparent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_yellow_selector"
                        android:button="@android:color/transparent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/layout_padding_10dp"
                        android:layout_marginRight="@dimen/layout_padding_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_purple_selector"
                        android:button="@android:color/transparent"
                        android:gravity="center" />
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>